---
source: src/codegen/tests/debug_tests.rs
expression: codegen
---
; ModuleID = '<internal>'
source_filename = "<internal>"
target datalayout = "[filtered]"
target triple = "[filtered]"

%myStruct = type { i32, double, [11 x i32] }

@gStruct = global %myStruct zeroinitializer, !dbg !0
@b = global [11 x %myStruct] zeroinitializer, !dbg !13
@llvm.global_ctors = appending global [1 x { i32, ptr, ptr }] [{ i32, ptr, ptr } { i32 65535, ptr @__unit___internal___[ctor-hash]__ctor, ptr null }]

define void @myStruct__ctor(ptr %0) {
entry:
  %self = alloca ptr, align [filtered]
  store ptr %0, ptr %self, align [filtered]
  %deref = load ptr, ptr %self, align [filtered]
  %c = getelementptr inbounds nuw %myStruct, ptr %deref, i32 0, i32 2
  call void @__myStruct_c__ctor(ptr %c)
  ret void
}

define void @__global_b__ctor(ptr %0) {
entry:
  %self = alloca ptr, align [filtered]
  store ptr %0, ptr %self, align [filtered]
  %__global_b__idx0 = alloca i32, align [filtered]
  store i32 0, ptr %__global_b__idx0, align [filtered]
  store i32 0, ptr %__global_b__idx0, align [filtered]
  br label %while_body

while_body:                                       ; preds = %continue1, %entry
  %load___global_b__idx0 = load i32, ptr %__global_b__idx0, align [filtered]
  %tmpVar = icmp sgt i32 %load___global_b__idx0, 10
  %1 = zext i1 %tmpVar to i8
  %2 = icmp ne i8 %1, 0
  br i1 %2, label %condition_body, label %continue1

continue:                                         ; preds = %condition_body
  ret void

condition_body:                                   ; preds = %while_body
  br label %continue

buffer_block:                                     ; No predecessors!
  br label %continue1

continue1:                                        ; preds = %buffer_block, %while_body
  %deref = load ptr, ptr %self, align [filtered]
  %load___global_b__idx02 = load i32, ptr %__global_b__idx0, align [filtered]
  %tmpVar3 = mul i32 1, %load___global_b__idx02
  %tmpVar4 = add i32 %tmpVar3, 0
  %tmpVar5 = getelementptr inbounds [11 x %myStruct], ptr %deref, i32 0, i32 %tmpVar4
  call void @myStruct__ctor(ptr %tmpVar5)
  %load___global_b__idx06 = load i32, ptr %__global_b__idx0, align [filtered]
  %tmpVar7 = add i32 %load___global_b__idx06, 1
  store i32 %tmpVar7, ptr %__global_b__idx0, align [filtered]
  br label %while_body
}

define void @__myStruct_c__ctor(ptr %0) {
entry:
  %self = alloca ptr, align [filtered]
  store ptr %0, ptr %self, align [filtered]
  ret void
}

define void @__unit___internal___[ctor-hash]__ctor() {
entry:
  call void @myStruct__ctor(ptr @gStruct)
  call void @__global_b__ctor(ptr @b)
  ret void
}

!llvm.module.flags = !{!16, !17}
!llvm.dbg.cu = !{!18}

!0 = !DIGlobalVariableExpression(var: !1, expr: !DIExpression())
!1 = distinct !DIGlobalVariable(name: "gStruct", scope: !2, file: !2, line: 11, type: !3, isLocal: false, isDefinition: true)
!2 = !DIFile(filename: "<internal>", directory: "")
!3 = !DICompositeType(tag: DW_TAG_structure_type, name: "myStruct", scope: !2, file: !2, line: 2, size: 512, align [filtered], flags: DIFlagPublic, elements: !4, identifier: "myStruct")
!4 = !{!5, !7, !9}
!5 = !DIDerivedType(tag: DW_TAG_member, name: "a", scope: !2, file: !2, line: 3, baseType: !6, size: 32, align [filtered], flags: DIFlagPublic)
!6 = !DIBasicType(name: "DINT", size: 32, encoding: DW_ATE_signed, flags: DIFlagPublic)
!7 = !DIDerivedType(tag: DW_TAG_member, name: "b", scope: !2, file: !2, line: 4, baseType: !8, size: 64, align [filtered], offset: 64, flags: DIFlagPublic)
!8 = !DIBasicType(name: "LREAL", size: 64, encoding: DW_ATE_float, flags: DIFlagPublic)
!9 = !DIDerivedType(tag: DW_TAG_member, name: "c", scope: !2, file: !2, line: 5, baseType: !10, size: 352, align [filtered], offset: 128, flags: DIFlagPublic)
!10 = !DICompositeType(tag: DW_TAG_array_type, baseType: !6, size: 352, align [filtered], elements: !11)
!11 = !{!12}
!12 = !DISubrange(count: 11, lowerBound: 0)
!13 = !DIGlobalVariableExpression(var: !14, expr: !DIExpression())
!14 = distinct !DIGlobalVariable(name: "b", scope: !2, file: !2, line: 12, type: !15, isLocal: false, isDefinition: true)
!15 = !DICompositeType(tag: DW_TAG_array_type, baseType: !3, size: 5632, align [filtered], elements: !11)
!16 = !{i32 2, !"Dwarf Version", i32 5}
!17 = !{i32 2, !"Debug Info Version", i32 3}
!18 = distinct !DICompileUnit(language: DW_LANG_C, file: !2, producer: "RuSTy Structured text Compiler", isOptimized: false, runtimeVersion: 0, emissionKind: FullDebug, globals: !19, splitDebugInlining: false)
!19 = !{!0, !13}
